--- a/src/login/templates/register.html
+++ b/src/login/templates/register.html
@@ -5,6 +5,13 @@
     <title>Title</title>
 </head>
 <body>
-
+<h3>register</h3>
+<form method="post">
+    {% csrf_token %}
+    <input type="text" name="email" placeholder="Email">
+    <input type="password" name="password" placeholder="Password">
+    <input type="text" name="name" placeholder="Name">
+    <input type="submit" value="注册">
+</form>
 </body>
 </html>
