--- a/src/login/templates/main.html
+++ b/src/login/templates/main.html
@@ -1,10 +1,153 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="{% static 'plugins/bootstrap-3.4.1/css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/1.css' %}">
+    <style>
+        table {
+          border-collapse: collapse;
+          width: 100%;
+        }
+
+        th, td {
+          text-align: center;
+          padding: 8px;
+        }
+
+        tr:nth-child(even){background-color: #f2f2f2}
+
+        th {
+          background-color: white;
+          color: black;
+        }
+
+        .left-column {
+              width: 30%;
+              border-right: 1px solid #dddddd; /* 左边用一条线分开 */
+            }
+    </style>
+
 </head>
 <body>
-<h3>main</h3>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">OCR文本识别阅读器</a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <!--                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>-->
+                <li><a href="/main">主界面</a></li>
+                <li><a href="/editor">编辑界面</a></li>
+                <li><a href="/operate">识别界面</a></li>
+
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/user">个人中心</a></li>
+                <li><a href="/login">退出</a></li>
+
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<table>
+  <tr>
+    <th class="left-column" rowspan="18">
+      <div class="image-container">
+          <a href="/editor">
+      <img src="/static/img/5.png"></a><br>
+      </div>
+    </th>
+   <tr>
+      <th>日期</th>
+      <th>文件名</th>
+      <th>操作</th>
+    </tr>
+    <!-- 创建18行 -->
+    <tr>
+      <td>Row 1, Cell 1</td>
+      <td>Row 1, Cell 2</td>
+      <td>Row 1, Cell 3</td>
+    </tr>
+    <tr>
+      <td>Row 2, Cell 1</td>
+      <td>Row 2, Cell 2</td>
+      <td>Row 2, Cell 3</td>
+    </tr>
+    <tr>
+      <td>Row 3, Cell 1</td>
+      <td>Row 3, Cell 2</td>
+      <td>Row 3, Cell 3</td>
+    </tr>
+    <tr>
+      <td>Row 18, Cell 1</td>
+      <td>Row 18, Cell 2</td>
+      <td>Row 18, Cell 3</td>
+    </tr>
+    <tr>
+      <td>Row 18, Cell 1</td>
+      <td>Row 18, Cell 2</td>
+      <td>Row 18, Cell 3</td>
+    </tr><tr>
+      <td>Row 18, Cell 1</td>
+      <td>Row 18, Cell 2</td>
+      <td>Row 18, Cell 3</td>
+    </tr><tr>
+      <td>Row 18, Cell 1</td>
+      <td>Row 18, Cell 2</td>
+      <td>Row 18, Cell 3</td>
+    </tr><tr>
+      <td>Row 18, Cell 1</td>
+      <td>Row 18, Cell 2</td>
+      <td>Row 18, Cell 3</td>
+    </tr><tr>
+      <td>Row 18, Cell 1</td>
+      <td>Row 18, Cell 2</td>
+      <td>Row 18, Cell 3</td>
+    </tr><tr>
+      <td>Row 18, Cell 1</td>
+      <td>Row 18, Cell 2</td>
+      <td>Row 18, Cell 3</td>
+    </tr><tr>
+      <td>Row 18, Cell 1</td>
+      <td>Row 18, Cell 2</td>
+      <td>Row 18, Cell 3</td>
+    </tr><tr>
+      <td>Row 18, Cell 1</td>
+      <td>Row 18, Cell 2</td>
+      <td>Row 18, Cell 3</td>
+    </tr><tr>
+      <td>Row 18, Cell 1</td>
+      <td>Row 18, Cell 2</td>
+      <td>Row 18, Cell 3</td>
+    </tr><tr>
+      <td>Row 18, Cell 1</td>
+      <td>Row 18, Cell 2</td>
+      <td>Row 18, Cell 3</td>
+    </tr><tr>
+      <td>Row 18, Cell 1</td>
+      <td>Row 18, Cell 2</td>
+      <td>Row 18, Cell 3</td>
+    </tr><tr>
+      <td>Row 18, Cell 1</td>
+      <td>Row 18, Cell 2</td>
+      <td>Row 18, Cell 3</td>
+    </tr>
+</table>
+
+<script src="{% static 'plugins/bootstrap-3.4.1/js/bootstrap.min.js'%}"></script>
 </body>
 </html>
