--- a/src/login/templates/register.html
+++ b/src/login/templates/register.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Register</title>
+    <link rel="stylesheet"  href="{% static 'css/1.css' %}">
+    <link rel="stylesheet" href="{% static 'plugins/bootstrap-3.4.1/css/bootstrap.css' %}">
+
 </head>
 <body>
-<h3>register</h3>
-<form method="post">
-    {% csrf_token %}
-    <input type="text" name="email" placeholder="Email">
-    <input type="password" name="password" placeholder="Password">
-    <input type="text" name="name" placeholder="Name">
-    <input type="submit" value="注册">
-</form>
+
+<img src="/static/img/3.png" alt="Description"><br>
+<center><h1>注册</h1></center>
+<div class="image-container" style="padding: 2px">
+    <form method="post">
+        {% csrf_token %}
+        邮件：<input id="email" type="email" class="form-control" name="email" value="" required autofocus><br><br>
+        密码：<input id="password" type="password" class="form-control" name="password" required><br><br>
+        名称: <input id="name" type="text" class="form-control" name="name" required><br><br>
+      <center><input type="submit" value="提交"></center>
+    </form>
+</div>
 </body>
 </html>
